# pastrami

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
rhai-sci/: Cargo.toml
rhai-sci/src/: lib.rs
scripts/: pre_tauri_build.cjs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
