[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"], optional = true }
rhai-sci = { version = "0.1.9", features = ["smartcore", "nalgebra", "rand", "io"] }
rhai-ml = "0.1.2"
rhai = { version = "1.9.0", features= ["sync"] }

[features]
default = []
desktop = ["custom-protocol"]
custom-protocol = ["tauri", "tauri/custom-protocol"]
