[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
rhai-sci = { version = "0.1.9", features = ["smartcore", "nalgebra", "rand", "io"] }
rhai-ml = "0.1.2"
rhai-fs = { version = "0.1.3", features = ["sync"] }
rhai-url = "0.0.5"
rhai-rand = "0.1.6"
rhai = { version = "1.9.0", features= ["sync"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
